css/style.css
/* -------------------------------- 

Primary style

-------------------------------- */
*, *::after, *::before {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: "Open Sans", sans-serif;
  color: #363558;
  background-color: #1c1726;
}

a {
  color: #544173;
  text-decoration: none;
}

h1, h2 {
  font-family: "Vollkorn", serif;
}

/* -------------------------------- 

Patterns - reusable parts of our design

-------------------------------- */
.overflow-hidden {
  overflow: hidden;
}

/* -------------------------------- 

Header

-------------------------------- */
header {
  height: 200px;
  /* line-height: 50px; */
  text-align: left;
  background: #ffffff;
}
header h1 {
  text-align: center;
  font-size: 2.2rem;
  color: #363558;
  padding: 25px 0px 0px 0px;
}

header p {
  padding: 25px 30px 25px 30px;
  font-size: 1rem;
}

@media only screen and (min-width: 600px) {
  header {
    height: 400px;
    /* line-height: 50px; */
  }
  header h1 {
    padding: 50px 0px 0px 0px;
    font-size: 3rem;
  }
  header p {
    font-size: 2rem;
    padding: 50px 150px 50px 150px;
  }
}


/* -------------------------------- 

Main content

-------------------------------- */
.cd-main {
  overflow-x: hidden;
}
.cd-main::before {
  /* never visible - this is used in jQuery to check the current MQ */
  display: none;
  content: 'mobile';
}
.cd-main > * {
  -webkit-transition: -webkit-transform 0.5s 0.4s;
  -moz-transition: -moz-transform 0.5s 0.4s;
  transition: transform 0.5s 0.4s;
}
.cd-main.fold-is-open > * {
  /* on mobile - translate .cd-main content to the right when the .cd-folding-panel is open */
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-transition: -webkit-transform 0.5s 0s;
  -moz-transition: -moz-transform 0.5s 0s;
  transition: transform 0.5s 0s;
}
@media only screen and (min-width: 600px) {
  .cd-main.fold-is-open > * {
    -webkit-transform: translateX(600px);
    -moz-transform: translateX(600px);
    -ms-transform: translateX(600px);
    -o-transform: translateX(600px);
    transform: translateX(600px);
  }
}
@media only screen and (min-width: 1100px) {
  .cd-main::before {
    /* never visible - this is used in jQuery to check the current MQ */
    content: 'desktop';
  }
  .cd-main.fold-is-open > * {
    /* reset style - on bigger devices we translate the gallery items */
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0);
  }
}

.cd-gallery::after {
  clear: both;
  content: "";
  display: table;
}
.cd-gallery::before {
  /* this is the dark layer covering the .cd-gallery when the .cd-folding-panel is open */
  display: block;
  content: '';
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(28, 23, 38, 0.6);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 0.5s 0.4s, visibility 0s 0.9s;
  -moz-transition: opacity 0.5s 0.4s, visibility 0s 0.9s;
  transition: opacity 0.5s 0.4s, visibility 0s 0.9s;
}
.fold-is-open .cd-gallery::before {
  visibility: visible;
  opacity: 1;
  -webkit-transition: opacity 0.5s 0s, visibility 0s 0s;
  -moz-transition: opacity 0.5s 0s, visibility 0s 0s;
  transition: opacity 0.5s 0s, visibility 0s 0s;
}

.cd-item {
  width: 100%;
  height: 300px;
  text-align: center;
  /* Force Hardware Acceleration */
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition: -webkit-transform 0.5s 0.4s;
  -moz-transition: -moz-transform 0.5s 0.4s;
  transition: transform 0.5s 0.4s;
}
.cd-item > a {
  display: table;
  height: 100%;
  width: 100%;
  overflow: hidden;
  color: #ffffff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.cd-item > a.dark-text {
  color: #363558;
}
.cd-item > a.dark-text b {
  border-color: #363558;
}
.cd-item div {
  display: table-cell;
  vertical-align: middle;
}
.cd-item:nth-of-type(1) {
  background-color: #363558;
}
.cd-item:nth-of-type(2) {
  background-color: #544173;
}
.cd-item:nth-of-type(3) {
  background-color: #dadcdc;
}
.cd-item:nth-of-type(4) {
  background-color: #65d29b;
}
.cd-item h2 {
  font-size: 2.2rem;
}
.cd-item p {
  line-height: 1.2;
  font-size: 1.4rem;
  opacity: 0.6;
  padding: 1em 0;
}
.cd-item b {
  display: inline-block;
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 1px;
  padding: 1em 1.3em;
  border-radius: 50em;
  border: 1px solid #ffffff;
}
/* ... */

